[project]
name = "datasette-llm-limits"
version = "0.1a0"
description = "Plugin for configuring periodic limits on LLM usage in Datasette"
readme = "README.md"
authors = [{name = "Datasette"}]
license = "Apache-2.0"
classifiers=[
    "Framework :: Datasette"
]
requires-python = ">=3.10"
dependencies = [
    "datasette>=1.0a28",
    "datasette-llm-accountant",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project.urls]
Homepage = "https://github.com/datasette/datasette-llm-limits"
Changelog = "https://github.com/datasette/datasette-llm-limits/releases"
Issues = "https://github.com/datasette/datasette-llm-limits/issues"
CI = "https://github.com/datasette/datasette-llm-limits/actions"

[project.entry-points.datasette]
llm_limits = "datasette_llm_limits"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[tool.uv]
prerelease = "allow"

